# ezmysqlpy

./: LICENSE  README.md  pyproject.toml
ezmysqlpy/: __init__.py
mysqlpy/: __init__.py  dbops.py  exceptions.py
tests/: test-mysqlpy.py
