[build-system]
requires = ["hatchling", "mysql-connector-python"]
build-backend = "hatchling.build"

[project]
name = "mysqlpy"
version = "1.1.5"
authors = [
    { name="Sahan Lakshitha", email="sahanlksk@gmail.com" },
]
description = "A package that simplifies most common MYSql database operations."
readme = "README.md"
license = { text="MIT" }
requires-python = ">=3.5"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Database",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"
