[build-system]
requires = ["hatchling", "mysql-connector-python"]
build-backend = "hatchling.build"

[project]
name = "mysqlpy"
version = "1.1.7"
authors = [
    { name="Sahan Lakshitha", email="sahanlksk@gmail.com" },
]
description = "A package that simplifies most common MySQL database operations."
readme = "README.md"
license = { text="MIT" }
requires-python = ">=3.5"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Database",
]

[project.urls]
"Homepage" = "https://github.com/sahanLK/mysqlpy"
"Bug Tracker" = "https://github.com/sahanLK/mysqlpy/issues"
